css/styles.css
/* ... */
.CV .heading {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  width: 100%;
  padding-right: 6%;
  padding-bottom: var(--space-sm);
  border-top: 1px solid #4E5E5F;
  border-bottom: 1px solid #4E5E5F;
  background-color: var(--surface-primary);
}

.company-role {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.company-role h3 {
  border-top: none;
  border-bottom: none;
  background-color: transparent;
}

.CV .roles-list {
  display: flex;
  flex-direction: row;
  gap: var(--space-md);
}

/*TODO CHANGE THE TEXT COLOUR TO BE ON ACTION*/
/*TODO CHANGE HOW THE SURFACE ACTS ON HOVER*/
.CV .roles-list li {
  font-size: var(--font-size-body-sm);
  text-align: center;

  background-color: var(--surface-secondary);
  border: var(--border-width-sm) solid var(--border-secondary);
  padding: var(--space-xs) var(--space-md);
}



.location {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  padding-left: 12%;
}

.job-info {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.job-info .text-div {
  padding-left: 12%;
}

.job-info .image-div {
  max-height: 100%;
}

.job-image {
  max-width: 30%;
  min-width: 30%;
  max-height: 100%;
}

.job-image img {
  max-width: 80%;
  height: auto;
}

@media screen and (max-width: 800px) {
  .CV .heading {
    gap: var(--space-md);
    padding-bottom: var(--space-md);
  }
  .company-role {
    flex-direction: column;
    align-items:flex-start ;
    padding-left: 12%;
  }
  .company-role h3 {
    padding-left: 0%;
  }
}

.tools-list {
  display: flex;
  flex-direction: row; 
  flex-wrap: wrap;
  gap: var(--space-md);
}

.tools-list li {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-evenly;
  padding: var(--space-sm);
  height: 136px;
  width: 96px;
  text-align: center;
  background-color: var(--surface-nav);
}

.tools-list .tool-icon {
  display: flex;
  align-self: center;
  justify-content: center;
  aspect-ratio: 1/1 ;
  max-height: 64px;
}

.tool-icon picture,
.tool-icon picture img,
.tool-icon img {
  flex-shrink: 1;
  max-height: 64px;
  max-width: 100%;
  height: auto;
  width: auto;
  display: flex;
  justify-content: center;
  align-self: center;
  object-fit: contain;
}

/*#endregion CV*/

/*#region writing-blocks*/

  .text-div {
    display: flex;
    align-self: stretch;
    width: 100%;
    justify-content: center;
    flex-direction: column;
    gap: var(--space-lg);
    background-color: var(--surface-primary);
    padding: var(--space-lg) var(--space-ml);
  }

  .text-div ul {
    list-style-type: square;
  }

  .text-div li + li {
    margin-top: var(--space-md);
  }
/*#endregion writing-blocks*/

/*#region Image Styling*/

.banner-image {
  max-width: 100%;
}

/*#region button-control carousel*/
.button-carousel {
  display: flex;
  flex-direction: column;
  max-width: 100%;
  gap: var(--space-md);
}

.button-carousel-images {
  max-height: 50vh;
  width: 100%;
  display: flex;
  overflow: hidden;
  align-self: center;
  background-color: var(--surface-action);
}

.button-carousel-images:not(.single-image) {
  height: 50vh;
}

.button-carousel-images.slides-vert {
  mask-image: linear-gradient(to bottom, black calc(100% - 5%), transparent);
}

.button-carousel-images a {
  max-height: 50vh;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  overflow: hidden;
  cursor: zoom-in;
}

.button-carousel-images figure {
  height: 100%;
}

.button-carousel-images a img {
  max-width: 100%;
  height: 100%;
  object-fit: contain;
}

.button-carousel-images.slides-vert a img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: top;
}

@media screen and (min-width: 700px) {
  .button-carousel-images.slides-vert.slides-mobile-screens a img {
    width: 50%;
    height: 100%;
    object-fit: cover;
    object-position: top;
  }
}

.carousel-caption {
  background-color: var(--surface-nav);
  font-family: var(--font-family-mono);
  text-decoration: none;
  color: var(--text-body);
  text-align: center;
  padding: var(--space-sm);
  padding-bottom: var(--space-md);
}

.button-carousel-buttons {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  gap:var(--space-lg)
}
/*#endregion button-control carousel*/

/*#region gallery*/

.swipe-gallery {
  max-width: 100em;
  gap: var(--space-lg);
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(30%, 1fr));
  grid-auto-rows: minmax(0, auto);
}

.swipe-gallery.extra-long {
  grid-auto-rows: minmax(0, 50vh);
  overflow: hidden;
  mask-image: linear-gradient(to bottom, black calc(100% - 5%), transparent);
}

.swipe-gallery a {
  display: flex;
  align-content: center;
  justify-content: center;
}

.swipe-gallery a img {
  max-width: 100%;
  object-fit: cover;
}

.swipe-gallery:not(.extra-long) a img {
  height: 100%;
}

.swipe-gallery a img:hover {
  cursor: zoom-in;
}

/*#endregion gallery*/

/*#endregion Image Styling*/

